--- a/public/css/player.css
+++ b/public/css/player.css
@@ -328,20 +328,26 @@ h2 {
   position: relative;
   background-color: #4caf50;
   border-radius: 50%;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   animation: circle-fade-in 0.3s ease-in-out;
 }
 
 .checkmark {
   border-radius: 5px;
+  position: relative;
+  display: block;
+  height: 40px;
+  width: 20px;
 }
 
 .checkmark.draw:after {
   content: '';
   display: block;
   position: absolute;
-  left: 30px;
-  top: 45px;
+  top: 8px;
+  left: 8px;
   width: 15px;
   height: 30px;
   border: solid white;
